--- a/src/styles.css
+++ b/src/styles.css
@@ -5,33 +5,29 @@ html, body {
     background: #7159c1;
 }
 
-header {
-    background: yellow;
-    height: 100px;
-    grid-column-start: 1;
-    grid-column-end: 3;
-}
-main {
-    background: blue;
-    height: 100px;
-    grid-column-start: 1;
-    grid-column-end: 2;
-}
-aside {
-    background: green;
-    height: 100px;
-    grid-column-start: 2;
-    grid-column-end: 3;
-}
-footer {
-    background: red;
-    height: 100px;
-    grid-column-start: 1;
-    grid-column-end: 3;
-}
-
 .container {
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 20vh 70vh 10vh;
+    grid-template-areas:    "h h"
+                            "m a"
+                            "f f"
 }
+
+header {
+    background: yellow;
+    grid-area: h;
+}
+main {
+    background: blue;
+    grid-area: m;
+}
+aside {
+    background: green;
+    grid-area: a;
+}
+footer {
+    background: red;
+    grid-area: f;
+}
+
