--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
-html, body {
-    margin: 0;
+body, html {
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
     background: #7159c1;
 }
@@ -11,23 +11,25 @@ html, body {
     grid-template-rows: 20vh 70vh 10vh;
     grid-template-areas:    "h h"
                             "m a"
-                            "f f"
+                            "f f";
 }
 
 header {
     background: yellow;
     grid-area: h;
 }
+
 main {
     background: blue;
-    grid-area: m;
+    grid-area: m
 }
+
 aside {
     background: green;
     grid-area: a;
 }
+
 footer {
     background: red;
     grid-area: f;
 }
-
